# variable-tampering-detector

./: .gitignore  build_tools.sh  env.sh  readme.md
apps/: Makefile  company_app.c  company_app_config  compile_flags.txt  ebitda.txt  gadgets.txt  global_function_write.c  global_function_write_config  global_write.c  global_write.cpp  global_write_config  input.txt  rop_plan.txt  run_global_function_wtool.sh  run_global_write_wtool.sh  run_normal_program.sh  run_rop_exploit.sh  run_rop_exploit_wtool.sh  stat_fmt.txt
apps/stat_fmts/rop_vuln/: a.out  payload_builder.c  stat_fmt.txt
apps/stat_fmts/rop_vuln_app/: a.out  payload_builder.c
apps/stat_fmts/rop_vuln_drio/: a.out  payload_builder.c  stat_fmt.txt
src/: CMakeLists.txt  avg_bb_size.c  config  global_var_write_detect.c
