add_library(global_var_write_detect SHARED global_var_write_detect)
find_package(DynamoRIO)
if (NOT DynamoRIO_FOUND)
	message(FATAL_ERROR "DynamoRIO package required to build")

endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(global_var_write_detect)
use_DynamoRIO_extension(global_var_write_detect drmgr)
use_DynamoRIO_extension(global_var_write_detect drutil)
use_DynamoRIO_extension(global_var_write_detect drreg)
use_DynamoRIO_extension(global_var_write_detect drx)
use_DynamoRIO_extension(global_var_write_detect droption) 